--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -39,7 +39,6 @@ jobs:
           path: |
             . 
             !venv/
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -53,6 +52,10 @@ jobs:
         with:
           name: python-app
           path: .
+      - name: Login via Az module
+        uses: azure/login@v1
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
           
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
